[project]
name = "alien-ink"
version = "0.1.1"
description = "Alien-Ink"
authors = [
    { name = "Cody Collier", email = "cmcollier@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'machine learning',
]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    'torch>=2.0',
]

[project.urls]
Homepage = "https://pypi.org/project/alien-ink/"
Repository = "https://github.com/codycollier/alien-ink"

[project.optional-dependencies]
examples = [
    "tqdm",
]

test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "alien_ink",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["alien_ink"]


